[package]
name = "liquidation_searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.100"
solana-client = "3.1.5"
anchor-lang = "0.32.1"
tokio-stream = "0.1.17"
base64 = "0.22.1"
bytemuck = "1.22.0"
static_assertions = "1.1.0"
fixed = "=1.28.0"